# new-repo

./: .gitignore  README.md  index.html  package.json  tauri.conf.json  vite.config.ts
.github/workflows/: tauri-build.yml
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
